# runtime-programmable-switch

./: .gitignore  README.md  configure.ac  runtime_register_reconfig_readme.md
include/: Makefile.am
include/bm/bm_sim/: P4Objects.h  conditionals.h  context.h  match_tables.h  named_p4object.h  parser.h  pipeline.h  runtime_reconfig_error_codes.h  stateful.h  switch.h
runtime_examples/SYN_flooding_protection/app/: attacker_send.py  error_rate_checker.py  new_SYN_flooding_protection.json  new_SYN_flooding_protection.p4  old_SYN_flooding_protection.json  p4app.json  s1-commands.txt
runtime_examples/SYN_flooding_protection/src/code/: SYN_flooding_protection.p4  attacker_send.py  error_rate_checker.py  s1-runtime.json  topology.json
runtime_examples/SYN_flooding_protection/src/marked_code/: SYN_flooding_protection_with_mark.json  SYN_flooding_protection_with_mark.p4  SYN_flooding_protection_with_mark.p4i  attacker_send.py  error_rate_checker.py  reconfiguration_command.txt  s1-runtime.json  topology.json
runtime_examples/SYN_flooding_protection/utils/: netstat.py  p4_mininet.py  p4apprunner.py  p4runtime_switch.py  run_exercise.py
runtime_examples/SYN_flooding_protection/utils/cheat_sheet_src/: main.tex
runtime_examples/SYN_flooding_protection/utils/cheat_sheet_src/src/: architecture.txt  tables.txt
runtime_examples/SYN_flooding_protection/utils/mininet/: appcontroller.py  apptopo.py  multi_switch_mininet.py  p4_mininet.py  single_switch_mininet.py
runtime_examples/SYN_flooding_protection/utils/p4runtime_lib/: bmv2.py  convert.py  error_utils.py  helper.py  simple_controller.py  switch.py
runtime_examples/SYN_flooding_protection_old_utils/app/: old_SYN_flooding_protection_with_mark.p4  p4app.json
runtime_examples/consistency_example/app/: p4app.json  s1-commands.txt
runtime_examples/multi_tenant/app/: command_ExecW2WO.txt  p4app.json
runtime_examples/normalization/app/: command_ExecAtomicity.txt  p4app.json
services/: .gitignore
src/bm_runtime/: Standard_server.cpp
src/bm_sim/: P4Objects.cpp  context.cpp  match_tables.cpp  parser.cpp
targets/simple_switch/: simple_switch.h
targets/simple_switch/tests/: .gitignore  Makefile.am  test_runtime_conditional_reconfig_commands.cpp  test_runtime_conditional_reconfig_p4objects.cpp  test_runtime_flex_reconfig_commands.cpp  test_runtime_flex_reconfig_p4objects.cpp  test_runtime_flex_reconfig_trigger.cpp  test_runtime_register_reconfig_commands.cpp  test_runtime_register_reconfig_rehash.cpp  test_runtime_table_reconfig_commands.cpp  test_runtime_table_reconfig_p4objects.cpp
targets/simple_switch/tests/testdata/runtime_conditional_reconfig/: runtime_conditional_reconfig_init.json  runtime_conditional_reconfig_init.p4  runtime_conditional_reconfig_new.json  runtime_conditional_reconfig_new.p4
targets/simple_switch/tests/testdata/runtime_flex_reconfig/: runtime_flex_reconfig_init.json  runtime_flex_reconfig_init.p4
targets/simple_switch/tests/testdata/runtime_register_reconfig/: new_SYN_flooding_protection.json  new_SYN_flooding_protection.p4  new_SYN_flooding_protection_with_mark.p4.json  old_SYN_flooding_protection.json  old_SYN_flooding_protection.p4  old_SYN_flooding_protection_with_mark.p4.json  reconfiguration_command.txt  runtime_register_reconfig_init.p4
targets/simple_switch/tests/testdata/runtime_table_reconfig/: runtime_table_reconfig_init.json  runtime_table_reconfig_new.json
tests/: Makefile.am  test_runtime_register_reconfig_commands.cpp  test_runtime_register_reconfig_p4objects.cpp
tests/testdata/runtime_register_reconfig/: runtime_register_reconfig_init.json  runtime_register_reconfig_init.p4
thrift_src/: standard.thrift
tools/: runtime_CLI.py
